--- a/reply/nodestyle.qss
+++ b/reply/nodestyle.qss
@@ -1,3 +1,17 @@
 QWidget { background: transparent;}
-QLabel { color: #e0e0e0; background: transparent; }
-QGraphicsView { selection-background-color: rgb(255,255,255);}
+QGraphicsView{
+    background-color:red;
+}
+QLineEdit {
+    border:1px solid gray;
+    border-radius: 5px;
+    padding: 0 5px;
+    background-color: gray;
+    font-size:20px;
+}
+QLabel {
+    color: #e0e0e0; background: transparent;
+    border-radius:5px;
+    font-size:20px;
+}
+
